src/common/styles.module.scss
@import '../../public/assets/scss/utils/breakpoints';

.videosMainImg {
    max-width: 100%;
    margin-bottom: 10px;
    text-align: center;
}

.MainImg {
    max-width: 100%;
    height: auto;
    margin-bottom: 10px;
}

.compArticlesVideoGirl {
    a {
        color: #007bff;

        @media (prefers-color-scheme: dark) {
            color: var(--tp-icon-sky);
        }
    }

    /* Theme reset strips list bullets globally; restore for article prose */
    ul {
        list-style-type: disc;
        padding-left: 1.5em;
        margin-bottom: 15px;
    }

    ol {
        list-style-type: decimal;
        padding-left: 1.5em;
        margin-bottom: 15px;
    }

    li {
        list-style-type: inherit;
        display: list-item;
        margin-bottom: 0.35em;
    }
}

.selectedCategory {
    text-decoration: underline;
    text-decoration-thickness: 4px;
}

.videoDetailsBreadcrumb {
    @media (max-width: 440px) {
        display: flex;
        flex-wrap: wrap;
        align-items: center;

        .selectedCategory {
            flex-basis: 100%;
            margin-left: 33px;
            margin-top: 8px;
        }
    }
}

.return {
    margin-left: 5px;
    margin-right: 10px;
}

.textAlignCenter {
    text-align: center;
}

.customTablePadding > :not(caption) > * > * {
    padding: 0;
}

/* Common styles */
.common-title-styles {
    color: var(--tp-common-white);
    font-weight: 400;
    font-size: 25px;
    text-transform: uppercase;
    line-height: 1.2;
    margin-bottom: 0;

    @media #{$lg} {
        font-size: 23px;
    }
    @media #{$md} {
        font-size: 20px;
    }
    @media #{$xs} {
        font-size: 19px;
    }

    /*@media #{(var(--breakpoint-xl))} {
        font-size: 23px;
    }
    @media #{var(--breakpoint-md)} {
        font-size: 20px;
    }
    @media #{var(--breakpoint-xs)} {
        font-size: 19px;
    }*/
}

.tpBreadcrumb {
    display: flex;
    flex-direction: row;
    @extend .common-title-styles;
    


    .title {
        @extend .common-title-styles; /* Using extend for nested .title */
        text-wrap: nowrap;
    }

    .group {
        display: flex;

        @media #{$xs} {
            flex-direction: column;
        }

        .element {
            cursor: pointer;
            margin-left: 10px;
            font-family: var(--tp-ff-heading), serif;
            text-wrap: nowrap;
        }
    }
}



.tp-breadcrumb__title {

}

